--- a/notebook_database_and_modelisation.ipynb
+++ b/notebook_database_and_modelisation.ipynb
@@ -1720,6 +1720,15 @@
     "df_test.to_csv('df_test', compression='zip')"
    ]
   },
+  ,
+  {
+   "cell_type": "markdown",
+   "id": "5c5f2c4f",
+   "metadata": {},
+   "source": [
+    "### Model"
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": 41,
